# mcp-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.en.md  README.md  SKILL.md  biome.json  install.sh  mcp_servers.json  package.json  tsconfig.json
.github/workflows/: ci.yml  npm-publish.yml  release.yml
docs/: npm-publishing.md
scripts/: generate-system-instructions.ts  install.js  release.sh
src/: api.rs  client.rs  client.ts  config.rs  config.ts  daemon-client.ts  daemon.rs  daemon.ts  daemon_client.rs  errors.rs  errors.ts  index.ts  lib.rs  main.rs  output.rs  output.ts  version.ts
src-ts/: config.ts  daemon.ts  index.ts  version.ts
src-ts/commands/: call.ts  list.ts
src/commands/: call.rs  call.ts  grep.rs  grep.ts  info.rs  info.ts  list.rs  list.ts  mod.rs
tests/: cli-errors.test.ts  client.test.ts  config.test.ts  errors.test.ts  filter.test.ts  grep.test.ts  output.test.ts
tests/integration/: cli.test.ts
