[package]
name = "mcp-cli"
version = "1.0.0"
edition = "2021"
authors = ["Philipp Schmid", "Antigravity"]
description = "A lightweight CLI for interacting with MCP (Model Context Protocol) servers, rewritten in Rust"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
futures-util = "0.3"
regex = "1.10"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
rand = "0.8"
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

