[package]
name = "mcp-cli"
version = "0.1.1"
edition = "2021"
authors = ["Philipp Schmid", "Antigravity"]
description = "A lightweight Rust CLI and library for interacting with MCP (Model Context Protocol) servers"
license = "MIT"
readme = "README.md"
repository = "https://github.com/doggy8088/mcp-cli"

[lib]
name = "mcp_cli"
path = "src/lib.rs"

[[bin]]
name = "mcp-cli"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
regex = "1.10"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
rand = "0.8"
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
